--- a/SingularityUI/app/styles/colors.styl
+++ b/SingularityUI/app/styles/colors.styl
@@ -3,7 +3,7 @@ $linkBlue = #08c
 $beige = #f3efe0
 $grey = #444444
 $grey-light = #ededed
-$grey-xtra-light = #f0f0f0
+$grey-xtra-light = #fafafa
 $red = #e94d4d
 $orange = #df7310
 $yellow = #ffff99
@@ -16,4 +16,3 @@ $dark-yellow = #e6e65c
 $removeRed = #df6f6f
 
 
-//
