class up form styles and clarify redirect prompt

--- a/SingularityUI/app/templates/vex/requestRun.hbs
+++ b/SingularityUI/app/templates/vex/requestRun.hbs
@@ -5,9 +5,10 @@
 <div class="vex-dialog-input">
 	<input id='commandLineInput' name="commandLineInput" type="text" class="vex-dialog-prompt-input" placeholder="" value="">
 </div>
-<hr style='border-color: #dadada'>
+<hr class='border-color-light-gray'>
 
-<p>Wait for task to start, then bring me directly to a file <small>(optional)</small>:</p>
+<p>Wait for task to start, then bring me directly to a file</p> 
+<p>(Optional. Leave field blank for no action.)</p>
 
 <div class="vex-dialog-input">
 	<input id='filename' name="filename" type="text" class="vex-dialog-prompt-input" placeholder="e.g. service.log" value="">
