Change config option name to align with logrotate option. Logrotate to olddir as well.

--- a/SingularityExecutor/src/main/resources/logrotate.conf.hbs
+++ b/SingularityExecutor/src/main/resources/logrotate.conf.hbs
@@ -16,6 +16,7 @@ notifempty
 {{#if extrasFiles}}
 {{#each extrasFiles}}{{{this}}} {{/each}} {
   dateformat {{{ extrasDateformat }}}
+  olddir {{{ rotateDirectory }}}
   missingok
 }
 {{/if}}
