--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -39,9 +39,7 @@
             a
                 position relative
                 overflow hidden
-                padding auto
-                padding-left 12px
-                padding-right 12px
+                padding 0 12px
                 display inline-block
                 background transparent
                 text-decoration none
