--- a/SingularityUI/app/templates/taskDetail/taskOverview.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskOverview.hbs
@@ -1,20 +1,16 @@
 {{#if data.isStillRunning}}
-    {{#ifNotEqual data.killStatus 'kill9'}}
-            {{#if data.isInCleanup}} 
-                <div class="alert alert-warning" role="alert">
-                    Task is in Cleanup. {{data.cleanupMessage}} You may still force kill this task.
-                </div>
-            {{else}} 
-                {{#if data.isCleaning}}
-                    <div class="alert alert-warning" role="alert"> 
-                        Task is in cleaning. You may still force kill this task.
-                    </div>
-                {{/if}}
-            {{/if}}
-    {{/ifNotEqual}}
-    {{#ifEqual data.killStatus 'kill9'}}
-        <div class="alert alert-warning" role="alert">Request is being force killed.</div>
-    {{/ifEqual}}
+    {{! If there's a TaskCleanup object associated with this task, display its info }}
+    {{#if data.cleanup}}
+        <div class="alert alert-warning" role="alert">
+            <b>Task is cleaning:</b> {{data.cleanup.message}}
+        </div>
+    {{else}}
+        {{#if data.isCleaning}}
+            <div class="alert alert-warning" role="alert">
+                <b>Task is terminating:</b> To issue a non-graceful termination (kill -term), click Destroy Task.
+            </div>
+        {{/if}}
+    {{/if}}
 {{/if}}
 
 {{! Part of taskBase }}
@@ -44,19 +40,19 @@
                 JSON
             </a>
             {{#if data.isStillRunning}}
-                {{#unless data.isCleaning}}
-                    <a class="btn btn-danger" data-action="remove" data-kill-type="kill"> Kill task </a>
-                {{/unless}}
-                {{#ifNotEqual data.killStatus 'kill9'}}
-                    {{#if data.isInCleanup}}
-                        <a class="btn btn-danger" data-action="remove" data-kill-type="killOverride"> Override kill </a>
+                {{#if data.cleanup}}
+                    {{#if data.cleanup.isImmediate}}
+                        <a class="btn btn-danger" data-action="remove"> Destroy task </a>
+                    {{else}}
+                        <a class="btn btn-danger" data-action="remove"> Override cleanup </a>
                     {{/if}}
-                {{/ifNotEqual}}
-                {{#unless data.isInCleanup}}
+                {{else}}
                     {{#if data.isCleaning}}
-                        <a class="btn btn-danger" data-action="remove" data-kill-type="kill9"> Destroy task </a>
+                        <a class="btn btn-danger" data-action="remove"> Destroy task </a>
+                    {{else}}
+                        <a class="btn btn-danger" data-action="remove"> Kill task </a>
                     {{/if}}
-                {{/unless}}
+                {{/if}}
             {{/if}}
         </div>
     </div>
