set position fixed on new loader

--- a/SingularityUI/app/styles/loader.styl
+++ b/SingularityUI/app/styles/loader.styl
@@ -37,6 +37,11 @@
         margin-right 5px
 
 
+.page-loader-fixed
+    position: fixed
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
 
 .page-loader-with-message
     text-align center
