Add additional task data in table
Show pending_type in the table
Show deploy_id in the table
Links to the Request (since this is a future task it can't link to a
task)

--- a/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
@@ -9,6 +9,12 @@
                     <th data-sort-attribute="pendingTask.pendingTaskId.nextRunAt" class="hidden-xs">
                         Next run
                     </th>
+                    <th>
+                        Pending Type
+                    </th>
+                    <th>
+                        Deploy ID 
+                    </th>
                     <th class="hidden-xs">
                         {{! Actions column }}
                     </th>
@@ -20,9 +26,7 @@
             {{#each tasks}}
                 <tr data-task-id="{{ id }}">
                     <td>
-                        <span title="{{ id }}">
-                            {{ id }}
-                        </span>
+                        <a href="{{appRoot}}/request/{{pendingTask.pendingTaskId.requestId}}">{{ id }}</a>
                     </td>
                     <td class="hidden-xs">
                         {{timestampFromNow pendingTask.pendingTaskId.nextRunAt}}
@@ -31,6 +35,12 @@
                                 <span class="label label-danger">OVERDUE</span>
                             {{/ifTimestampInPast}}
                         {{/if}}
+                    </td>
+                    <td>
+                        {{humanizeText pendingTask.pendingTaskId.pendingType}}
+                    </td>
+                    <td>
+                        {{pendingTask.pendingTaskId.deployId}}
                     </td>
                     <td class="actions-column hidden-xs">
                         <a data-task-id="{{ id }}" data-action="run-now" title="Run now">
