--- a/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
@@ -9,10 +9,10 @@
                     <th data-sort-attribute="pendingTask.pendingTaskId.nextRunAt" class="hidden-xs">
                         Next run
                     </th>
-                    <th>
+                    <th data-sort-attribute="pendingTask.pendingTaskId.pendingType">
                         Pending Type
                     </th>
-                    <th>
+                    <th data-sort-attribute="pendingTask.pendingTaskId.deployId">
                         Deploy ID 
                     </th>
                     <th class="hidden-xs">
