add load balancer info

--- a/SingularityUI/app/templates/taskDetail/taskBase.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskBase.hbs
@@ -16,6 +16,10 @@
         
     </div>
 
+    <div id='lb-updates' class='col-md-12'>
+        
+    </div>
+
     <div id='info' class='col-md-12'>
         
     </div>
